--- a/bug-tracker-React-UI/src/components/style.scss
+++ b/bug-tracker-React-UI/src/components/style.scss
@@ -95,7 +95,7 @@ textarea:focus {
         color: $shadowOfLight;
         display: block;
         font-weight: 700;
-        padding: 1.5rem 0rem 1.5rem 0.5rem;
+        padding: 1.5rem 0.5rem 1.5rem 0.5rem;
         text-decoration: none;
         transition: background-color, color, 0.1s;
         width: 100%;
@@ -545,7 +545,7 @@ textarea:focus {
 
 
 // responsive CSS
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 950px) {
     .App {
         display: flex;
         flex-direction: column;
@@ -567,11 +567,22 @@ textarea:focus {
         }
     }
 
+    .project {
+        display: flex;
+        flex-direction: column;
+
+        .projectProperties {
+            width: 100% !important;
+        }
+
+        .projectCRUD {
+            background-color: $lighterBlue !important;
+            width: 100% !important;
+        }
+    }
+
     .bug {
-        // box-shadow: 10px 10px $lighterBlue;
-        // color: $darkBlue;
-        // display: flex;
-        // margin-bottom: 1rem;
+        display: flex;
         flex-direction: column;
 
         .bugsProperties {
@@ -580,10 +591,6 @@ textarea:focus {
 
         .bugsCrud {
             background-color: $lighterBlue !important;
-            // display: flex;
-            // flex-direction: column !important;
-            // justify-content: space-around;
-            // align-items: center;
             width: 100% !important;
 
             button {
@@ -652,10 +659,6 @@ textarea:focus {
     align-items: center;
 }
 
-.loginHeader {
-    // display: inline;
-}
-
 .registerLink {
     color: $lighterBlue;
     text-decoration: none;
@@ -691,41 +694,6 @@ a {
     cursor: pointer;
 }
 
-
-// .spinner {
-//   width: 40px;
-//   height: 40px;
-//   background-color: $shadowOfLight;
-
-//   margin: 100px auto;
-//   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-//   animation: sk-rotateplane 1.2s infinite ease-in-out;
-// }
-
-// @-webkit-keyframes sk-rotateplane {
-//   0% { -webkit-transform: perspective(120px) }
-//   50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-//   100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-// }
-
-// @keyframes sk-rotateplane {
-//   0% { 
-//     transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-//     -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
-//   } 50% { 
-//     transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-//     -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
-//   } 100% { 
-//     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-//     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-//   }
-// }
-
-.lds-dual-ring {
-//   display: block;
-//   width: 40px;
-//   height: 40px;
-}
 .lds-dual-ring:after {
   content: " ";
   display: block;
